# microbloq

./: .clang-format  .gitignore  example_collection.json  meson.build  shell.nix
src/: main.cpp  meson.build
src/block/: block.cpp  block.hpp  instance.cpp  instance.hpp  library.cpp  library.hpp  library_json.cpp  meson.build
src/ui/: blockparts.cpp  blockparts.h  blockwidget.cpp  blockwidget.h  blockwrapper.cpp  blockwrapper.h  mainwindow.cpp  mainwindow.ui  meson.build
src/workspace/: actions.cpp  actions.hpp  meson.build  model.cpp  model.hpp
